# howlongtobeat-cli

./: Cargo.toml  README.md
src/: args.rs  display_time_component.rs  display_time_components.rs  duration_formatter.rs  get_search_hash.rs  main.rs  post_body.rs  post_result.rs
